workout/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: workout-app
  labels:
    name: workout-app
