workout/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workout-app
  namespace: workout-app
  labels:
    app: workout-app
spec:
  type: LoadBalancer
  selector:
    app: workout-app
  ports:
    - name: http
      port: 80
      targetPort: 8090
      protocol: TCP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
